# misis2025s-22-01-kanevskiy-d-e

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
prj.cw/: CMakeLists.txt  README.md  gt_json_lst  gt_lst  img_lst  json_lst  main.cpp  output_lst  report.md  water_filling.cpp  water_filling.h
prj.cw/gt_json/: gt_1.json  gt_11.json  gt_2.json  gt_4.json  gt_6.json  gt_7.json
prj.cw/json/: 10.json  3.json
prj.cw/metric/: CMakeLists.txt  metric.cpp
prj.cw/metrics/: metrics_k16.csv  metrics_k5.csv  metrics_k8.csv  timings_k16.csv  timings_k5.csv  timings_k8.csv
prj.cw/psnr/: CMakeLists.txt  psnr.cpp
prj.lab/: CMakeLists.txt
prj.lab/lab_01/: CMakeLists.txt  report.md  task01_01.cpp  task01_02.cpp  task_01.cpp
prj.lab/lab_02/: CMakeLists.txt  report.md  stats  task02.cpp
prj.lab/lab_03/: CMakeLists.txt  report.md  task03.cpp
prj.lab/lab_04/: CMakeLists.txt  config.json  detect.json  protocol  report.md  task04_01.cpp  task04_02.cpp  task04_03.cpp
prj.lab/lab_05/: CMakeLists.txt  report.md  task05.cpp
prj.lab/lab_06/: CMakeLists.txt  report.md  task06.cpp
prj.lab/lab_06/images and gt/: collage_gt.json  config.json  gt.lst  test_gt.json
prj.lab/lab_06/output/: detect.json  detect.lst  detect_test.json  protocol
prj.lab/semcv/: CMakeLists.txt  semcv.cpp
prj.lab/semcv/include/semcv/: semcv.hpp
prj.lab/utils/: CMakeLists.txt  generate_images.cpp
